--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <h1>afonsolacerda</h1>
+    <div> <h1>afonsolacerda</h1> </div>
     <div class="pendulo">
         <div></div>
         <div></div>
